--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
     </header>
     <main class="bg-[#41ff6b1a]">
-        <div class="w-11/12 mx-auto grid sm:grid-cols-5">
+        <div class="w-11/12 mx-auto grid sm:grid-cols-5 gap-8">
             <!-- card section -->
           <div class="col-span-4">
             <!-- card cols section 1 -->
@@ -230,8 +230,30 @@
           </div>
 
           <!-- history section -->
-         <div class="col-span-1"></div>
+         <div class="col-span-4 mb-8 min-h-[50vh] sm:col-span-1  sm:mt-12 sm:h-[107vh] bg-white p-6 shadow-xl">
+             <div class="flex items-center justify-between gap-10 sm:gap-0 ">
+              <!-- call-history -->
+                <div class="flex items-center gap-2 ">
+                    <i class="fa-regular fa-clock text-[#5C5C5C] "></i>
+                    <h1 class="font-roboto font-medium text-xl leading-7 text-[#111111]"> Call History</h1>
 
+                </div>
+                <!-- clear-btn -->
+                 <button class="bg-[#00A63E] py-4 px-10   rounded-4xl flex text-white font-inter  items-center leading-6 text-[18px] font-semibold transition  duration-500 hover:bg-green-700" id="clear-btn"> Clear</button>
+              </div>
+              <div id="history-cointainer" class="my-5">
+                <!-- history -->
+             <div class="flex justify-between gap-12 sm:gap-0 items-center bg-[#FAFAFA]  p-4">
+                <div>
+                    <h3 class="font-inter text-xl font-semibold text-[#111111]">Fire Service Number</h3>
+                    <p class="font-hind-madurai text-[18px] text-[#5C5C5C]">999</p>
+                </div>
+                <p class="font-hind-madurai text-[18px] text-[#111111]">11:36:58 AM</p>
+             </div>
+              </div>
+         </div>
+         
+             
         </div>
     </main>
     <script src="./index.js"></script>
