call history input fide successfully create

--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
               </div>
               <div id="history-cointainer" class="my-5">
                 <!-- history -->
-             <div class="flex justify-between gap-12 sm:gap-0 items-center bg-[#FAFAFA]  p-4">
+             <!-- <div class="flex justify-between gap-12 sm:gap-0 items-center bg-[#FAFAFA]  p-4">
                 <div>
                     <h3 class="font-inter text-xl font-semibold text-[#111111]">Fire Service Number</h3>
                     <p class="font-hind-madurai text-[18px] text-[#5C5C5C]">999</p>
                 </div>
                 <p class="font-hind-madurai text-[18px] text-[#111111]">11:36:58 AM</p>
-             </div>
+             </div> -->
               </div>
          </div>
          
