--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Emergency Service</title>
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -243,13 +243,7 @@
               </div>
               <div id="history-cointainer" class="my-5">
                 <!-- history -->
-             <!-- <div class="flex justify-between gap-12 sm:gap-0 items-center bg-[#FAFAFA]  p-4">
-                <div>
-                    <h3 class="font-inter text-xl font-semibold text-[#111111]">Fire Service Number</h3>
-                    <p class="font-hind-madurai text-[18px] text-[#5C5C5C]">999</p>
-                </div>
-                <p class="font-hind-madurai text-[18px] text-[#111111]">11:36:58 AM</p>
-             </div> -->
+            
               </div>
          </div>
          
