--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                   Service
                 </h1>
             </div>
-            <div class="flex-col flex sm:flex-row gap-5  items-center">
-                <p class="bg-[#41ff6b1a] py-5 px-16   rounded-4xl flex"><span class="font-inter text-[#000000] mr-3 leading-6 text-xl font-black" id="heart-count">0</span> <span><i class="fa-solid fa-heart text-red-600 text-xl"></i></span></p>
+            <div class=" flex flex-col sm:flex-row gap-5  items-center">
+                <p class="bg-[#41ff6b1a] py-5 px-16   rounded-4xl flex "><span class="font-inter text-[#000000] mr-3 leading-6 text-xl font-black" id="heart-count">0</span> <span><i class="fa-solid fa-heart text-red-600 text-xl"></i></span></p>
                 
-                <p class="bg-[#41ff6b1a] py-4 px-13   rounded-4xl flex items-center"><span class="font-inter text-[#000000] mr-3 leading-6 text-[16px] font-black" id="coin">100</span> <span><img src="assets/fi_11280638.png" alt=""></span></p>
+                <p class="bg-[#41ff6b1a] py-4  px-13   rounded-4xl flex items-center"><span class="font-inter text-[#000000] mr-3 leading-6 text-xl font-black" id="coin">100</span> <span><img src="assets/fi_11280638.png" alt=""></span></p>
                 <p class="bg-[#00A63E] py-5 px-13   rounded-4xl flex text-white font-inter  items-center leading-6 text-[18px] font-semibold transition  duration-500 hover:bg-green-700"><span class="mr-2" id="copy-count">0</span> <span>copy</span></p>
                   
             </div>
